--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sizeme",
-  "version": "0.0.0-semantically-released",
+  "version": "2.0.1",
   "description": "Make your React Components aware of their width and height.",
   "main": "lib/react-sizeme.js",
   "scripts": {
